<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".view.home.MainFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toTopOf="@id/marginTop"
        app:layout_constraintWidth_percent=".15" />

    <ImageView
        android:id="@+id/ivOpenFileManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_round_collections_24"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/marginEnd"
        app:layout_constraintTop_toTopOf="@id/logo"
        app:layout_constraintWidth_percent=".074" />

    <TextView
        android:id="@+id/text_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/join_meeting"
        android:textColor="@color/text_primary"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputJoinCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/input_hint"
        app:boxBackgroundColor="@color/background_main"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:boxStrokeWidth="1dp"
        app:endIconTint="@color/icon_tint"
        app:errorTextColor="@color/input_text_error"
        app:hintEnabled="false"
        app:hintTextColor="@color/input_hint"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/text_join"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@drawable/ic_round_link_24"
        app:startIconTint="@color/icon_tint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_invite_code"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="15"
            android:minHeight="52dp"
            android:textColor="@color/input_text"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvJoinRoom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="6dp"
        android:background="@drawable/bg_tab"
        android:backgroundTint="@color/icon_tint"
        android:gravity="center"
        android:text="@string/join"
        android:textColor="@color/background_main"
        app:layout_constraintBottom_toBottomOf="@id/inputJoinCode"
        app:layout_constraintEnd_toEndOf="@id/inputJoinCode"
        app:layout_constraintTop_toTopOf="@id/inputJoinCode"
        app:layout_constraintWidth_percent=".22" />

    <TextView
        android:id="@+id/tvRecent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/recent"
        android:textColor="@color/text_primary"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/inputJoinCode" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintHeight_percent=".18"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/tvRecent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/recentGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tvRecent,rvRecent" />

    <TextView
        android:id="@+id/tvLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/library"
        android:textColor="@color/text_primary"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/rvRecent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLibrary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintHeight_percent=".16"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/tvLibrary"
        tools:listitem="@layout/item_recycler_videos" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".015" />

</androidx.constraintlayout.widget.ConstraintLayout>