<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.player.PlayerFragment">

    <FrameLayout
        android:id="@+id/videoFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.flyprosper.syncplay.view.custom.CustomVideoView
            android:id="@+id/videoPlayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>
    </FrameLayout>


    <TextView
        android:id="@+id/tvMovieTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sample_movie_name_ext"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/videoFrame" />

    <TextView
        android:id="@+id/tvPeopleWatching"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/people_watching"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/tvMovieTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llInvite"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/tvPeopleWatching">

        <ImageView
            android:id="@+id/ivCopyLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_round_link_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_tint" />

        <TextView
            android:id="@+id/tvInviteLink"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:text="link-link-link"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvInviteButton"
            app:layout_constraintStart_toEndOf="@id/ivCopyLink"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvInviteButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_tab"
            android:backgroundTint="@color/tab_bg1"
            android:gravity="center"
            android:text="@string/invite"
            android:textColor="@color/background_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".27" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/chatBorder"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llInvite" />

    <TextView
        android:id="@+id/tvChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:text="@string/chat"
        android:textColor="@color/text_primary"
        app:layout_constraintBottom_toTopOf="@id/clChat"
        app:layout_constraintStart_toStartOf="@id/marginStart"
        app:layout_constraintTop_toBottomOf="@id/chatBorder" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clChat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChat">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".96" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/msgBorder1"
            app:layout_constraintEnd_toEndOf="@id/mEnd"
            app:layout_constraintStart_toStartOf="@id/mStart"
            app:layout_constraintTop_toTopOf="parent"
            app:stackFromEnd="true"
            tools:listitem="@layout/item_chat" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/msgBorder1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/separator"
            app:layout_constraintBottom_toTopOf="@id/etMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvChat" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@color/background_main"
            android:drawablePadding="12dp"
            android:hint="@string/type_something"
            android:inputType="textCapSentences|textMultiLine"
            android:maxHeight="120dp"
            android:paddingStart="12dp"
            android:paddingTop="18dp"
            android:paddingEnd="12dp"
            android:paddingBottom="18dp"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/msgBorder2"
            app:layout_constraintEnd_toEndOf="@id/mEnd"
            app:layout_constraintStart_toStartOf="@id/mStart" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSendMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_round_send_24"
            app:layout_constraintBottom_toBottomOf="@id/etMessage"
            app:layout_constraintEnd_toEndOf="@id/etMessage"
            app:layout_constraintTop_toTopOf="@id/etMessage" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/msgBorder2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/separator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_keyboard_arrow_down_24"
        app:layout_constraintEnd_toEndOf="@id/marginEnd"
        app:layout_constraintTop_toTopOf="@id/tvChat" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".015" />

</androidx.constraintlayout.widget.ConstraintLayout>